    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B7E4ED"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        xmlns:facebook="http://schemas.android.com/apk/res-auto"
        tools:context="com.sergiogomeza.login.Login">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_marginTop="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logoenruta"
                android:layout_gravity="center"/>
            <EditText
                android:layout_marginTop="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user"
                android:inputType="textPersonName"
                android:textSize="30sp"
                android:textColorHint="@color/white"
                android:textColor="@color/black"
                android:id="@+id/etUser"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email1"
                android:inputType="textEmailAddress"
                android:textSize="30sp"
                android:textColorHint="@color/white"
                android:textColor="@color/black"
                android:id="@+id/etEmail"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone"
                android:textSize="30sp"
                android:textColorHint="@color/white"
                android:textColor="@color/black"
                android:id="@+id/etPhone"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:textSize="30sp"
                android:textColorHint="@color/white"
                android:textColor="@color/black"
                android:id="@+id/etPass"/>
            <Button
                android:layout_marginTop="20sp"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:background="#3AB4CF"
                android:layout_gravity="center"
                android:text="@string/login"
                android:id="@+id/bLogin"/>
            <Button
                android:layout_marginTop="20sp"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:background="#3AB4CF"
                android:layout_gravity="center"
                android:text="@string/reg"
                android:id="@+id/bReg"/>

            <com.facebook.login.widget.LoginButton
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                android:src="@drawable/facebook"
                android:id="@+id/ivfb" />
            <ImageView
                android:layout_width="80sp"
                android:layout_height="80sp"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                android:src="@drawable/googleplus"
                android:id="@+id/ivgp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvUser"
                android:layout_marginTop="20sp" />
        </LinearLayout>
    </ScrollView>
